Special-Items eingebaut und Playerreset umgesetzt (Schlange wird aber noch nicht schwarz)